# Pyrite

./: .gitignore  README.md  datatypes.py  main.py  mesh.py  nodes.csv  pyproject.toml  run.py  vertices.csv
example/: boundary.json  run.sh
examples/cover_example/: README.md  input.json  run.sh
examples/tensile_analysis/: README.md  input.json  run.sh  vertices copy.csv  vertices.csv
src/pyrite/: datatypes.py  element.py  entry.py  error.py  mesh.py  post_processor.py  solver.py
